--- a/index.html
+++ b/index.html
@@ -175,6 +175,33 @@
         </div>
         <input type="file" id="uploadDbInput" accept=".json" class="hidden" />
 
+        <!-- Region Lore Info Box -->
+        <div
+          id="regionLoreBox"
+          class="hidden mb-6 bg-gradient-to-r from-yellow-900 to-amber-900 border border-yellow-600 rounded-lg p-6 shadow-lg"
+        >
+          <div class="flex justify-between items-start mb-4">
+            <h3
+              id="regionLoreBoxTitle"
+              class="text-xl font-bold text-yellow-300"
+            >
+              📜 Demacia - Lore
+            </h3>
+            <button
+              id="regionLoreBoxClose"
+              class="text-yellow-400 hover:text-yellow-200 text-lg font-bold"
+            >
+              ✕
+            </button>
+          </div>
+          <div
+            id="regionLoreBoxContent"
+            class="text-yellow-100 text-sm leading-relaxed max-h-96 overflow-y-auto whitespace-pre-line"
+          >
+            <!-- Lore content will be loaded here -->
+          </div>
+        </div>
+
         <!-- Champions Grid -->
         <div
           id="championsGrid"
@@ -535,6 +562,32 @@
             <li>5. Save file và deploy lại lên Vercel</li>
           </ol>
         </div>
+      </div>
+    </div>
+    <!-- Region Lore Modal -->
+    <div
+      id="regionLoreModal"
+      class="fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center p-4 z-50 hidden"
+    >
+      <div
+        class="bg-slate-800 p-8 rounded-lg shadow-2xl max-w-3xl w-full max-h-[90vh] overflow-y-auto modal-content relative"
+      >
+        <button
+          id="regionLoreModalCloseButton"
+          class="absolute top-4 right-4 text-slate-400 hover:text-white text-2xl z-10 bg-slate-700 rounded-full w-8 h-8 flex items-center justify-center"
+        >
+          &times;
+        </button>
+        <h2
+          id="regionLoreTitle"
+          class="text-2xl font-bold text-yellow-300 mb-4 text-center"
+        >
+          Region Lore
+        </h2>
+        <div
+          id="regionLoreBody"
+          class="whitespace-pre-line text-slate-100 text-base leading-relaxed"
+        ></div>
       </div>
     </div>
     <!-- Footer -->
